<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi Time Table</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_subject">Add a Subject</string>
    <string name="action_compare_schedule">Compare Schedules</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_accept">Accept</string>
    <string name="action_edit">Edit</string>
    <string name="action_discard">Discard</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <!-- use in navigation drawer headerView -->
    <string name="schedule">TimeTable</string>
    <string name="widget_setting">On/Off</string>

    <!-- Subject Detail View -->
    <string name="subject_info">info</string>
    <string name="subject_day">day</string>
    <string name="subject_time">time</string>
    <string name="subject_place">place</string>
    <string name="subject_professor">professor</string>

    <!-- EditText Hint -->
    <string name="enter_your_schedule_name">TimeTable\'s Name</string>
    <string name="enter_a_name_of_subject">Subject</string>
    <string name="enter_a_name_of_professor">Professor</string>
    <string name="enter_a_name_of_classroom">Classroom</string>

    <!-- Button Name -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="insert_schedule">Make a TimeTable</string>
    <string name="update_schedule">Update this TimeTable</string>
    <string name="delete_schedule">Delete this TimeTable</string>
    <string name="delete_subject">Delete this Subject</string>
    <string name="content_authority">app.com.multitimetable.android.multitimetable</string>
    <!-- <string name="content_authority">com.example.android.sunshine.app</string> -->


    <!-- Day Text -->
    <string name="time_and_day">TIME\\DAY</string>
    <string name="time_day">Day</string>
    <string name="time_mon">MON</string>
    <string name="time_tue">TUE</string>
    <string name="time_wed">WED</string>
    <string name="time_thu">THU</string>
    <string name="time_fri">FRI</string>
    <string name="time_sat">SAT</string>
    <string name="time_sun">SUN</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="title_activity_select_schedule"> Select TimeTables to Compare </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_compare_schedule">Find Empty Schedules</string>
    <string name="title_activity_subject_detail">SubjectDetailActivity</string>
    <string name="title_activity_about"> About</string>
    <string name="title_activity_help"> Help </string>
    <string name="title_activity_subject_update">SubjectUpdateActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_overlap_schedule">Overlap TimeTables</string>

    <string name="title_section1">Select TimeTables</string>
    <string name="title_section2">Overlap TimeTables</string>

</resources>
