<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/activityAddSubjectLayout"
    tools:context="app.com.multitimetable.android.multitimetable.SubjectInsertActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subjectName"
        android:hint="@string/enter_a_name_of_subject"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/professorName"
        android:hint="@string/enter_a_name_of_professor"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/abc_text_size_small_material"/>


    <LinearLayout
        android:id="@+id/timeFormLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 장소및 시간 추가 형식 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/daySpinner"
                android:entries="@array/day_array"
                android:layout_marginTop="@dimen/abc_text_size_small_material"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:src="@drawable/ic_action_cancel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="time"
                android:hint="시작시간"
                android:editable="false"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/startTime" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="time"
                android:hint="종료시간"
                android:editable="false"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/endTime" />

        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classroomName"
            android:hint="@string/enter_a_name_of_classroom" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/timeFormLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 장소및 시간 추가 형식 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/daySpinner1"
                android:entries="@array/day_array"
                android:layout_marginTop="@dimen/abc_text_size_small_material"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:src="@drawable/ic_action_cancel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="time"
                android:hint="시작시간"
                android:editable="false"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/startTime1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="time"
                android:hint="종료시간"
                android:editable="false"
                android:focusable="false"
                android:ems="10"
                android:id="@+id/endTime1" />

        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classroomName1"
            android:hint="@string/enter_a_name_of_classroom" />

    </LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/button_material_dark"/>
    <!-- 장소 및 시간 추가 버튼 -->
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/makeNewFormBtn"
        android:src="@drawable/ic_action_new"

        android:layout_gravity="center_horizontal" />
</LinearLayout>
